# VM

./: CMakeLists.txt  Command.cpp  Command.hpp  Lexer.cpp  Lexer.hpp  OpCode.hpp  Operand.cpp  Operand.hpp  README.md  Type.hpp  Value.cpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp  main.cpp  types.hpp
